K8S/ingress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
  - hosts:
    - app-name.example.com
    secretName: tls-secret-name
  rules:
  - host: app-name.example.com
    http:
      paths:
      - backend:
          serviceName: app-name
          servicePort: 8080
